internal/xds/translator/testdata/out/xds-ir-sublinear/http-req-resp-sizes-stats.routes.yaml
- ignorePortInHostMatching: true
  name: listener-enable-req-resp-sizes-stats
  virtualHosts:
  - domains:
    - '*'
    name: listener-enable-req-resp-sizes-stats/*
    routes:
    - match:
        prefix: /
      name: first-route
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
